resolve gap issue and hide horizontal scrolling

--- a/packages/ui/src/views/chatmessage/ChatMessage.css
+++ b/packages/ui/src/views/chatmessage/ChatMessage.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
     border-radius: 0.5rem;
 }
 
@@ -78,7 +79,6 @@
     display: block;
     margin-right: 2.5rem;
     word-wrap: break-word;
-    overflow-wrap: break-word;
     color: #16bed7;
     font-weight: 500;
 }
